tests/type/errors/bad_undeclared_var1.typedsol
2:5 error: Symbol not found